<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:paddingVertical="80dp"
    tools:context=".views.WelcomePageActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/welcome_title"
        android:textColor="@color/venice_blue"
        android:textSize="35sp" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_fileName="hello_lottie.json"
        app:lottie_loop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/welcome_description"
        android:textColor="@color/venice_blue"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_iniziamo"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/venice_blue"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/iniziamo" />

</LinearLayout>