<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.HomePageActivity">

    <TextView
        android:id="@+id/text_view_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_bold"
        android:padding="50dp"
        android:text="@string/ciao_bentornato"
        android:textColor="@color/venice_blue"
        android:textSize="44sp" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/homepage_image"
        android:src="@drawable/image" />

    <TextView
        android:id="@+id/text_view_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view"
        android:layout_centerInParent="true"
        android:layout_marginTop="45sp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/fondazione_istituto_antoniano"
        android:textColor="@color/venice_blue"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="340sp"
        android:layout_below="@+id/text_view_info"
        android:layout_marginTop="45sp"
        android:backgroundTint="@color/venice_blue"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/open_scanner" />

</RelativeLayout>